--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,3 +5,5 @@ $dark-color: #323232;
 $black-color: #000000;
 $danger-color: #b71b1b;
 $grey-color: #505050;
+$light-grey-color: #eaeaea;
+$radius: 50px;
