--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -19,9 +19,10 @@
 			height: 50px;
 			min-height: 50px;
 			cursor: pointer;
+			@include transition();
 
 			&:hover {
-				opacity: 0.6;
+				opacity: 0.7;
 			}
 		}
 	}
