Made the Reset password and Update password pages

--- a/scss/_authpage.scss
+++ b/scss/_authpage.scss
@@ -89,6 +89,30 @@
 					}
 				}
 			}
+
+			.password {
+				position: relative;
+
+				span {
+					cursor: pointer;
+					position: absolute;
+					top: 95%;
+					color: lighten($grey-color, 10%);
+					right: 0%;
+					transform: translate(0%, -95%);
+
+					border-radius: 100%;
+					@include transition();
+
+					svg {
+						font-size: 1.1rem;
+					}
+
+					&:hover {
+						color: $dark-color;
+					}
+				}
+			}
 		}
 
 		button {
