--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -5,6 +5,10 @@
 	background-size: cover;
 	min-height: 100vh;
 
+	.container {
+		width: 80%;
+	}
+
 	header {
 		display: flex;
 		align-items: center;
@@ -29,10 +33,10 @@
 
 	main {
 		position: absolute;
-		top: 35%;
+		top: 40%;
 		left: 0;
 		right: 0;
-		transform: translate(0%, -35%);
+		transform: translate(0%, -40%);
 		h1 {
 			text-transform: uppercase;
 			font-weight: bold;
