--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,3 +22,26 @@ body {
 	background-color: $white-color;
 	color: $dark-color;
 }
+
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 90%;
+	margin: 0 auto;
+	height: 80px;
+	background-color: red;
+
+	.logo {
+		width: 150px;
+		min-width: 150px;
+		height: 50px;
+		min-height: 50px;
+		cursor: pointer;
+		@include transition();
+
+		&:hover {
+			opacity: 0.7;
+		}
+	}
+}
