--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,6 +4,9 @@ $white-color: #ffffff;
 $dark-color: #323232;
 $black-color: #000000;
 $danger-color: #b71b1b;
+$warning-color: #ff9f0a;
+$success-color: #30d158;
+$info-color: #0090fe;
 $grey-color: #505050;
 $light-grey-color: #eaeaea;
 $radius: 50px;
