--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -135,7 +135,8 @@ form {
 		label {
 			font-size: 0.7rem;
 		}
-		input {
+		input,
+		select {
 			font-family: "__Plus_Jakarta_Sans_65517a",
 				"__Plus_Jakarta_Sans_Fallback_65517a";
 			width: 100%;
@@ -152,6 +153,15 @@ form {
 			&:focus {
 				border-bottom-color: $primary-color;
 			}
+		}
+
+		input[type="number"]::-webkit-inner-spin-button,
+		input[type="number"]::-webkit-outer-spin-button {
+			-webkit-appearance: none;
+		}
+
+		input[type="number"] {
+			-moz-appearance: textfield;
 		}
 	}
 
@@ -184,3 +194,78 @@ form {
 		float: right;
 	}
 }
+
+// Alert
+.alert {
+	// background-color: cornflowerblue;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	padding: 0.5rem 1rem;
+	border-radius: 10px;
+	margin: 1rem 0;
+
+	svg {
+		font-size: 2rem;
+		margin-right: 1rem;
+	}
+
+	h5 {
+		margin-bottom: 0.5rem;
+	}
+
+	&-danger {
+		background-color: lighten($danger-color, 20%);
+		color: $white-color;
+		border: 2px solid $danger-color;
+	}
+
+	&-success {
+		background-color: $success-color;
+		color: $white-color;
+		border: 2px solid $success-color;
+	}
+
+	&-warning {
+		background-color: $warning-color;
+		color: $white-color;
+		border: 2px solid $warning-color;
+	}
+
+	&-info {
+		background-color: $info-color;
+		color: $white-color;
+		border: 2px solid $info-color;
+	}
+}
+
+// Loader
+
+// .loader {
+// 	position: fixed;
+// 	top: 0;
+// 	left: 0;
+// 	width: 100vw;
+// 	height: 100%;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	background-color: rgba($white-color, 0.5);
+// 	z-index: 2000;
+
+// 	.spinner {
+// 		border: 4px solid rgba($grey-color, 0.5);
+// 		border-left-color: $primary-color;
+// 		border-top-color: $primary-color;
+// 		border-radius: 50%;
+// 		width: 40px;
+// 		height: 40px;
+// 		animation: spin 1s linear infinite;
+// 	}
+
+// 	@keyframes spin {
+// 		to {
+// 			transform: rotate(360deg);
+// 		}
+// 	}
+// }
