--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -195,6 +195,22 @@ form {
 	}
 }
 
+.upload-image-button {
+	position: relative;
+
+	input {
+		opacity: 0;
+		cursor: pointer;
+		// z-index: 4000;
+	}
+	button {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -3;
+	}
+}
+
 // Alert
 .alert {
 	// background-color: cornflowerblue;
