--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -57,8 +57,7 @@ h6 {
 	text-align: center;
 	cursor: pointer;
 	padding: 1rem 2rem;
-	font-family: "__Plus_Jakarta_Sans_65517a",
-		"__Plus_Jakarta_Sans_Fallback_65517a";
+	font-family: "__Montserrat_8cc72f", "__Montserrat_Fallback_8cc72f";
 	border-radius: 100px;
 	@include transition();
 
@@ -137,8 +136,7 @@ form {
 		}
 		input,
 		select {
-			font-family: "__Plus_Jakarta_Sans_65517a",
-				"__Plus_Jakarta_Sans_Fallback_65517a";
+			font-family: "__Montserrat_8cc72f", "__Montserrat_Fallback_8cc72f";
 			width: 100%;
 			padding: 0.1rem 0 0.3rem 0;
 			font-weight: bold;
@@ -241,31 +239,31 @@ form {
 
 // Loader
 
-// .loader {
-// 	position: fixed;
-// 	top: 0;
-// 	left: 0;
-// 	width: 100vw;
-// 	height: 100%;
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: center;
-// 	background-color: rgba($white-color, 0.5);
-// 	z-index: 2000;
+.loader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgba($white-color, 0.5);
+	z-index: 2000;
 
-// 	.spinner {
-// 		border: 4px solid rgba($grey-color, 0.5);
-// 		border-left-color: $primary-color;
-// 		border-top-color: $primary-color;
-// 		border-radius: 50%;
-// 		width: 40px;
-// 		height: 40px;
-// 		animation: spin 1s linear infinite;
-// 	}
+	.spinner {
+		border: 4px solid rgba($grey-color, 0.5);
+		border-left-color: $primary-color;
+		border-top-color: $primary-color;
+		border-radius: 50%;
+		width: 40px;
+		height: 40px;
+		animation: spin 1s linear infinite;
+	}
 
-// 	@keyframes spin {
-// 		to {
-// 			transform: rotate(360deg);
-// 		}
-// 	}
-// }
+	@keyframes spin {
+		to {
+			transform: rotate(360deg);
+		}
+	}
+}
