--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,8 +30,7 @@
 }
 
 body {
-	font-family: "__Plus_Jakarta_Sans_65517a",
-		"__Plus_Jakarta_Sans_Fallback_65517a";
+	font-family: "__Montserrat_8cc72f", "__Montserrat_Fallback_8cc72f";
 	font-size: 13px;
 	line-height: 1.7;
 	width: 100%;
@@ -71,6 +70,11 @@ header {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+
+		.admin {
+			margin-left: 1rem;
+		}
+
 		a {
 			font-weight: bold;
 			display: flex;
@@ -179,6 +183,31 @@ header {
 	}
 
 	.status {
+		svg {
+			font-size: 5rem;
+		}
+	}
+}
+
+.student {
+	// background-color: darkolivegreen;
+	border: 2px dotted $primary-color;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+	padding: 2rem;
+	border-radius: 20px;
+	margin-bottom: 2rem;
+
+	strong {
+		color: $primary-color;
+	}
+
+	h6 {
+		margin-bottom: 1rem;
+	}
+
+	.icon {
 		svg {
 			font-size: 5rem;
 		}
