Made the reset password functional

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,7 @@ header {
 			border-radius: 20px;
 			text-align: center;
 			border: 2px dotted $grey-color;
-			padding: 2rem;
+			padding: 3rem 2rem;
 
 			svg {
 				display: block;
