--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -14,6 +14,10 @@ ul {
 	list-style: none;
 }
 
+.text-primary {
+	color: $primary-color;
+}
+
 .container {
 	width: 90%;
 	max-width: 1224px;
@@ -134,8 +138,8 @@ form {
 		margin: 0.5rem 0;
 		label {
 			font-size: 0.7rem;
-			}
-			input,
+		}
+		input,
 		select {
 			font-family: "__Montserrat_8cc72f", "__Montserrat_Fallback_8cc72f";
 			width: 100%;
